add minheight to prevent scroll bag

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       }
 
       .mobile-content {
-        height: calc(100% + 1px);
-        padding-bottom: 1000px;
+        min-height: calc(100% + 1px);
+        padding-bottom: 145px;
       }
     </style>
   </head>
